@@ -696,6 +696,7 @@ void	execute_operations(DB_EVENT *event, DB_ACTION *action)
 				op_host_add(event);
 				break;
 			case	OPERATION_TYPE_HOST_REMOVE:
+				/* TODO */
 				break;
 			case	OPERATION_TYPE_GROUP_ADD:
 				op_group_add(event,action,&operation);
@@ -704,8 +705,10 @@ void	execute_operations(DB_EVENT *event, DB_ACTION *action)
 				op_group_del(event,action,&operation);
 				break;
 			case	OPERATION_TYPE_TEMPLATE_ADD:
+				op_template_add(event,action,&operation);
 				break;
 			case	OPERATION_TYPE_TEMPLATE_REMOVE:
+				op_template_del(event,action,&operation);
 				break;
 			default:
 				break;
