@@ -245,8 +245,9 @@ void test()
 	zbx_uint64_t	hostid = 10016;
 
 	// 10004 - Standalone_t
+	// 10014 - Unix_t
 	
-	zbx_uint64_t	templateid = 10004;
+	zbx_uint64_t	templateid = 10014;
 
 	DBconnect(ZBX_DB_CONNECT_EXIT);
 
@@ -257,7 +258,7 @@ void test()
 	hosttemplateid = DBget_maxid("hosts_templates", "hosttemplateid");
 
 	DBexecute("insert into hosts_templates (hosttemplateid,hostid,templateid)"
-				"values(" ZBX_FS_UI64 "," ZBX_FS_UI64 "," ZBX_FS_UI64 ")",
+			"values(" ZBX_FS_UI64 "," ZBX_FS_UI64 "," ZBX_FS_UI64 ")",
 				hosttemplateid, hostid, templateid);
 
 	if( SUCCEED == DBsync_host_with_template(hostid, templateid))
